testsuite/tests/typecheck/should_compile/FD2.stderr

FD2.hs:26:36: error:
    Couldn't match expected type ‘e’ with actual type ‘e1’
    ‘e1’ is a rigid type variable bound by
         the type signature for:
         mf :: Elem a e1 => e1 -> Maybe e1 -> Maybe e1
         at FD2.hs:24:18
    ‘e’ is a rigid type variable bound by
        the type signature for:
        foldr1 :: Elem a e => (e -> e -> e) -> a -> e
        at FD2.hs:21:13
    Relevant bindings include
      y :: e1 (bound at FD2.hs:26:23)
      x :: e1 (bound at FD2.hs:26:15)
      mf :: e1 -> Maybe e1 -> Maybe e1 (bound at FD2.hs:25:12)
      f :: e -> e -> e (bound at FD2.hs:22:10)
      foldr1 :: (e -> e -> e) -> a -> e (bound at FD2.hs:22:3)
    In the first argument of ‘f’, namely ‘x’
    In the first argument of ‘Just’, namely ‘(f x y)’
    In the expression: Just (f x y)
